c++: Move library code into it's own directory
To fix build order issues with cmake on Windows.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/tests/Makefile.am
+++ b/c++/tests/Makefile.am
@@ -6,13 +6,13 @@ TESTS = basic_cpp_test serial_test
 basic_cpp_test_SOURCES = basic_cpp_test.cc
 
 basic_cpp_test_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/libgensiocpp.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
 	$(OPENSSL_LIBS)
 
 serial_test_SOURCES = serial_test.cc
 
 serial_test_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/libgensiocpp.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
 	$(OPENSSL_LIBS)
 
 check_PROGRAMS = basic_cpp_test serial_test
