--- a/c++/examples/Makefile.am
+++ b/c++/examples/Makefile.am
@@ -6,6 +6,6 @@ noinst_PROGRAMS = telnet_server
 telnet_server_SOURCES = telnet_server.cc
 
 telnet_server_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/libgensiocpp.la \
+	$(top_builddir)/c++/lib/libgensiocpp.la \
 	$(OPENSSL_LIBS)
 
