Fix UUCP locking defaults
Turn off UUCP locking for macos.

Set the default UUCP locking directory to /var/spool/lock for non-Linux
systems.

Allow the UUCP lock directory to be passed in with --with-uccp-locking
if it is not yes or no.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,18 @@ check_symbol_exists(signalfd "signalfd.h" HAVE_SIGNALFD)
 check_symbol_exists(regexec "regex.h" HAVE_REGEXEC)
 check_symbol_exists(fnmatch "fnmatch.h" HAVE_FNMATCH)
 
-option(USE_UUCP_LOCKING "Enable UUCP lock file handling for devices" ${UNIX})
+if (${UNIX} AND NOT ${APPLE})
+  set(DEF_UUCP_LOCKING ON)
+else()
+  set(DEF_UUCP_LOCKING OFF)
+endif()
+if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
+  set(UUCP_LOCK_DIR "/var/lock")
+else()
+  set(UUCP_LOCK_DIR "/var/spool/lock")
+endif()
+option(USE_UUCP_LOCKING "Enable UUCP lock file handling for devices"
+       ${DEF_UUCP_LOCKING})
 
 if(UNIX)
   set(HAVE_PTY 1)
