--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,6 @@ include(GNUInstallDirs)
 set (CMAKE_C_FLAGS "-Wall")
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 
-option(USE_UUCP_LOCKING "Enable UUCP lock file handling for devices" ON)
-
 option(ENABLE_TCP_WRAPPERS "Enable tcpwrappers support" ON)
 if(ENABLE_TCP_WRAPPERS)
   CHECK_INCLUDE_FILE(tcpd.h HAVE_TCPD_H)
@@ -147,6 +145,25 @@ check_symbol_exists(cfmakeraw "termios.h" HAVE_CFMAKERAW)
 check_symbol_exists(signalfd "signalfd.h" HAVE_SIGNALFD)
 check_symbol_exists(regexec "regex.h" HAVE_REGEXEC)
 check_symbol_exists(fnmatch "fnmatch.h" HAVE_FNMATCH)
+
+if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
+  set(APPLE 1)
+else()
+  set(APPLE 0)
+endif()
+
+if (${UNIX} AND NOT ${APPLE})
+  set(DEF_UUCP_LOCKING ON)
+else()
+  set(DEF_UUCP_LOCKING OFF)
+endif()
+if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
+  set(UUCP_LOCK_DIR "/var/lock")
+else()
+  set(UUCP_LOCK_DIR "/var/spool/lock")
+endif()
+option(USE_UUCP_LOCKING "Enable UUCP lock file handling for devices"
+       ${DEF_UUCP_LOCKING})
 
 if(UNIX)
   set(HAVE_STDIO 1)
