Fix Apple handling on Windows
For some reason Visual Studio doesn't like 1 and 0 for ON
and Off, and it doesnt like AND NOT.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,13 +178,17 @@ check_symbol_exists(regexec "regex.h" HAVE_REGEXEC)
 check_symbol_exists(fnmatch "fnmatch.h" HAVE_FNMATCH)
 
 if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Darwin")
-  set(APPLE 1)
+  set(APPLE ON)
 else()
-  set(APPLE 0)
+  set(APPLE OFF)
 endif()
 
-if (${UNIX} AND NOT ${APPLE})
-  set(DEF_UUCP_LOCKING ON)
+if (${UNIX})
+  if (${APPLE})
+    set(DEF_UUCP_LOCKING OFF)
+  else()
+    set(DEF_UUCP_LOCKING ON)
+  endif()
 else()
   set(DEF_UUCP_LOCKING OFF)
 endif()
