tcl: Add missing include to Makefile
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tcl/swig/Makefile.am
+++ b/tcl/swig/Makefile.am
@@ -1,5 +1,5 @@
 
-EXTRA_DIST = gensioglib.i CMakeLists.txt
+EXTRA_DIST = gensiotcl.i CMakeLists.txt
 
 SUBDIRS = . $(PYTHON_DIR)
 DIST_SUBDIRS = python
