osop: Add the start of generic environment handling
Windows and Unix work differently here, create a consistent interface.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -44,7 +44,8 @@ set(BASE_LIBFILES
   gensio_stdsock.c
   uucplock.c
   gensio_pty.c
-  gensio_osops.c)
+  gensio_osops.c
+  gensio_osops_env.c)
 
 set(UNIX_LIBFILES
   selector.c
