--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,7 +12,7 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 libgensio_la_SOURCES = \
 	gensio.c gensio_osops.c gensio_base.c sergensio.c utils.c buffer.c \
 	gensio_ll_fd.c gensio_ll_gensio.c gensio_acc.c gensio_acc_gensio.c \
-	errtrig.c gensio_circbuf.c \
+	errtrig.c gensio_circbuf.c gensio_osops_env.c \
 	gensio_net.c gensio_udp.c gensio_sctp.c \
 	sergensio_telnet.c gensio_filter_telnet.c telnet.c \
 	gensio_ssl.c gensio_filter_ssl.c \
