man: Add info on the new setup and thread functions
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -27,6 +27,13 @@ install_man3_symlink(gensio_set_log_mask.3 gensio_log_level_to_str.3)
 install_man3_symlink(gensio_set_log_mask.3 gensio_vlog.3)
 install_man3_symlink(gensio_set_log_mask.3 gensio_log.3)
 install_man3_symlink(gensio_os_funcs.3 gensio_default_os_hnd.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_unix_funcs_alloc.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_win_funcs_alloc.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_setup.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_cleanup.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_unix_get_wait_sigset.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_new_thread.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_wait_thread.3)
 install_man3_symlink(gensio_err.3 gensio_err_to_str.3)
 install_man3_symlink(gensio_write.3 gensio_write_sg.3)
 install_man3_symlink(gensio_open.3 gensio_open_s.3)
