--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -23,6 +23,11 @@ install-data-hook:
 	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_default_os_hnd.3
 	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_unix_funcs_alloc.3
 	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_win_funcs_alloc.3
+	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_os_proc_setup.3
+	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_os_proc_cleanup.3
+	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_os_proc_unix_get_wait_sigset.3
+	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_os_new_thread.3
+	$(LN_SF) gensio_os_funcs.3 $(DESTDIR)$(man3dir)/gensio_os_wait_thread.3
 	$(LN_SF) gensio_err.3 $(DESTDIR)$(man3dir)/gensio_err_to_str.3
 	$(LN_SF) gensio_write.3 $(DESTDIR)$(man3dir)/gensio_write_sg.3
 	$(LN_SF) gensio_open.3 $(DESTDIR)$(man3dir)/gensio_open_s.3
@@ -113,6 +118,11 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_default_os_hnd.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_unix_funcs_alloc.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_win_funcs_alloc.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_os_proc_setup.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_os_proc_cleanup.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_os_proc_unix_get_wait_sigset.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_os_new_thread.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_os_wait_thread.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_write_sg.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_err_to_str.3
 	$(RM_F) $(DESTDIR)$(man3dir)/gensio_open_s.3
