Add swig include directory for glib and tcl
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/glib/Makefile.am
+++ b/glib/Makefile.am
@@ -1,5 +1,6 @@
 
-AM_CFLAGS = -DBUILDING_GENSIO_DLL -I$(top_srcdir)/glib/include
+AM_CFLAGS = -DBUILDING_GENSIO_DLL -I$(top_srcdir)/glib/include \
+	 -I$(top_srcdir)/swig/include
 
 lib_LTLIBRARIES = libgensioglib.la
 
