tests: Add mdns as a final gensio
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -38,7 +38,8 @@ final_gensios = [
     "file",
     "ipmisol",
     "dummy",
-    "conacc"
+    "conacc",
+    "mdns"
 ]
 
 def check_gensio_enabled(g):
