--- a/swig/python/CMakeLists.txt
+++ b/swig/python/CMakeLists.txt
@@ -35,7 +35,8 @@ include_directories(${PYTHON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}
 		    "${PROJECT_SOURCE_DIR}/swig/include")
 set(CMAKE_SWIG_FLAGS -I${CMAKE_CURRENT_SOURCE_DIR} ${SWIG_EXTRA_FLAGS})
 swig_add_library(_gensio LANGUAGE python SOURCES ../gensio.i)
-swig_link_libraries(_gensio gensio)
+swig_link_libraries(_gensio gensio_python_swig gensio)
+set_target_properties(_gensio PROPERTIES LIBRARY_OUTPUT_NAME gensio)
 
 execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
 set(PYTHON_INSTALL_SITE_PACKAGES ${PYTHON_SITE_PACKAGES} CACHE FILEPATH
