configure: Fix detection of pty
Use the existance of posix_openpt, not pty.h.  pty.h is not universal
and not even used.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -583,7 +583,7 @@ AC_SUBST(HAVE_UNIX)
 AC_DEFINE_UNQUOTED([HAVE_UNIX], [$HAVE_UNIX], [Enable unix socket handling])
 
 HAVE_PTY=0
-AC_CHECK_HEADER(pty.h, [HAVE_PTY=1] )
+AC_CHECK_FUNCS(posix_openpt, [HAVE_PTY=1])
 AC_SUBST(HAVE_PTY)
 AC_DEFINE_UNQUOTED([HAVE_PTY], [$HAVE_PTY], [Enable PTY gensio])
 
