--- a/include/gensio/CMakeLists.txt
+++ b/include/gensio/CMakeLists.txt
@@ -1,5 +1,5 @@
 install(FILES gensio.h gensio_class.h sergensio.h sergensio_class.h
-        gensio_unix.h gensio_base.h gensio_acc_gensio.h
+        gensio_addr.h gensio_unix.h gensio_base.h gensio_acc_gensio.h
 	gensio_ll_fd.h gensio_ll_gensio.h selector.h argvutils.h
 	gensio_os_funcs.h gensio_err.h gensio_builtins.h gensio_osops.h
 	gensio_list.h gensio_dllvisibility.h
