tests:pty: Only run pty tests when it is present
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -6,7 +6,7 @@ gensios_enabled = {
     "udp": 1,
     "sctp": @HAVE_LIBSCTP@,
     "stdio": 1,
-    "pty": 1,
+    "pty": @HAVE_PTY@,
     "unix" : @HAVE_UNIX@,
     "ssl": @HAVE_OPENSSL@,
     "mux": 1,
