tests: Add EXEEXT to gensiot
So oomtest will run properly on Windows.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CFLAGS = -I$(top_srcdir)/glib/include -I$(top_srcdir)/tcl/include
 
-AM_TESTS_ENVIRONMENT = GENSIOT=$(top_builddir)/tools/gensiot
+AM_TESTS_ENVIRONMENT = GENSIOT=$(top_builddir)/tools/gensiot${EXEEXT}
 
 LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
