man: Install links for various gensio_os_func operations
A bunch were added to the docs, but no links were added.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -34,6 +34,37 @@ install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_cleanup.3)
 install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_unix_get_wait_sigset.3)
 install_man3_symlink(gensio_os_funcs.3 gensio_os_new_thread.3)
 install_man3_symlink(gensio_os_funcs.3 gensio_os_wait_thread.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_free.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_register_term_handler.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_register_reload_handler.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_proc_winsize_handler.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_zalloc.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_zfree.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_alloc_lock.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_free_lock.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_lock.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_unlock.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_get_monotonic_time.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_alloc_timer.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_free_timer.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_start_timer.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_start_timer_abs.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_stop_timer.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_stop_timer_with_done.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_alloc_runner.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_free_runner.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_run.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_set_vlog.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_service.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_handle_fork.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_alloc_waiter.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_free_waiter.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_wait.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_wait_intr.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_wait_intr_sigmask.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_wake.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_set_data.3)
+install_man3_symlink(gensio_os_funcs.3 gensio_os_funcs_get_data.3)
 install_man3_symlink(gensio_err.3 gensio_err_to_str.3)
 install_man3_symlink(gensio_write.3 gensio_write_sg.3)
 install_man3_symlink(gensio_open.3 gensio_open_s.3)
