Add sigwinch detection to cmake
It was added to autoconf, it needs to be in cmake, too.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ string(COMPARE EQUAL "${CMAKE_HOST_SYSTEM_NAME}" "Linux" HAVE_WORKING_PORT0)
 CHECK_LIBRARY_EXISTS(pam "pam_start" "" HAVE_PAM)
 
 check_symbol_exists(TIOCSRS485 sys/ioctl.h HAVE_DECL_TIOCSRS485)
+check_symbol_exists(SIGWINCH signal.h HAVE_DECL_SIGWINCH)
 
 CHECK_INCLUDE_FILE(sys/un.h HAVE_UNIX)
 
