crc16: Move to its own file
So it can be used elsewhere.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -46,7 +46,8 @@ set(BASE_LIBFILES
   gensio_osops.c
   gensio_osops_env.c
   gensio_filter_kiss.c
-  gensio_kiss.c)
+  gensio_kiss.c,
+  crc16.c)
 
 set(UNIX_LIBFILES
   selector.c
