--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -7,6 +7,6 @@ pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_deprecated.h gensio_mdns.h gensio_types.h \
 	gensio_osops_addrinfo.h gensio_osops_stdsock.h gensio_circbuf.h \
 	gensio_selector.h gensio_win.h gensio_osops_env.h \
-	gensio_os_funcs_public.h
+	gensio_os_funcs_public.h gensio_time.h
 
 EXTRA_DIST = gensio_version.h.in CMakeLists.txt
