tools: Set greflector python executable from config
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -717,5 +717,6 @@ AC_CONFIG_FILES([Makefile
 	man/Makefile
 	examples/Makefile
 	tests/runtest
-	tests/gensios_enabled.py])
+	tests/gensios_enabled.py
+	tests/reflector.py])
 AC_OUTPUT
